# policy-pilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  Makefile  OPTIMIZATION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  README.md  TESTING_INFRASTRUCTURE_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  env.prod.example  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.py  streamlit_app.py
docs/: API.md  DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  prompt-template.md  testing.md
examples/: prompt-template-demo.ts
nginx/: nginx.conf
policy_pilot/: __init__.py  config.py  knowledge_base.py
policy_pilot/graphs/: __init__.py
policy_pilot/ingestion/: __init__.py  chunking.py  embeddings.py  pdf.py  pipeline.py  preprocess.py
policy_pilot/rag/: __init__.py  retriever.py  service.py
policy_pilot/server/: __init__.py  app.py
policy_pilot/vectordb/: __init__.py  weaviate.py
scripts/: backup.sh  deploy.sh  docker-setup.sh  health-check.sh  ingest.py  load_sample_data.py  restore.sh  run_tests.py  setup.py  setup.sh  test_integration.py  vectordb_cli.py
src/: __init__.py  main.py  middleware.ts
src/api/: __init__.py  middleware.py  rate_limiter.py
src/api/middleware/: __init__.py
src/api/routes/: __init__.py  documents.py  health.py  query.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/: types.ts
src/app/api/chat/: route.ts
src/app/api/health/: route.ts
src/app/api/search/: route.ts
src/app/api/upload/: route.ts
src/app/auth/auth-code-error/: page.tsx
src/app/auth/callback/: route.ts
src/app/auth/forgot-password/: page.tsx
src/app/auth/login/: page.tsx
src/app/auth/reset-password/: page.tsx
src/app/auth/signup/: page.tsx
src/app/dashboard/: page.tsx
src/app/test/: page.tsx
src/components/: ThemeToggle.tsx  theme-toggle.tsx
src/components/auth/: AuthContainer.tsx  AuthProvider.tsx  ForgotPasswordForm.tsx  LoginForm.tsx  SignupForm.tsx
src/config/: __init__.py  database.py  production.py  settings.py
src/core/: __init__.py  logging.py
src/lib/: prompt-template.test.ts  prompt-template.ts  vector-search.ts
src/services/: __init__.py  cache_service.py  document_processor.py  embedding_service.py  file_service.py  gpt_service.py  rag_service.py  search_service.py
src/utils/: __init__.py  error_handler.py  exceptions.py  file_handlers.py  metrics.py  resilience.py  security.py  text_processing.py
supabase/: init.sql
tests/: conftest.py  conftest_full.py  test_document_processor.py  test_rag_service.py  test_simple.py
